--- a/launcher/settingsView/csettingsview_moc.ui
+++ b/launcher/settingsView/csettingsview_moc.ui
@@ -244,7 +244,7 @@
       <enum>QPlainTextEdit::NoWrap</enum>
      </property>
      <property name="plainText">
-      <string>http://downloads.vcmi.eu/Mods/repository.json</string>
+      <string>https://mods.vcmi.download/repository/develop.json</string>
      </property>
     </widget>
    </item>
